--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,24 @@
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="header-conteiner">
+      <form class="search-form" id="search-form">
+        <input
+          class="header-input"
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder=" Search images..."
+        />
+        <button class="header-search-button" type="submit">
+          <svg width="20" height="20">
+            <use href="./images/symbol-defs.svg#icon-search"></use>
+          </svg>
+        </button>
+      </form>
+    </div>
+    <div class="gallery"></div>
+    <button type="button" class="load-more is-hidden">Load more</button>
+  </body>
 </html>
